--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "langchain==1.2.7",
     "langchain-openai==1.1.7",
     "pydantic==2.12.5",
-    "python-dotenv==1.2.1"
+    "python-dotenv==1.2.1",
+    "sqlmodel>=0.0.31",
 ]
